--- a/WechatLibrary/WechatLibrary.Model/WechatLibrary.Model.Net45.csproj
+++ b/WechatLibrary/WechatLibrary.Model/WechatLibrary.Model.Net45.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommonDotNet">
+      <HintPath>..\packages\CommonDotNet.1.1.5\lib\net45\CommonDotNet.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -47,6 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessToken.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="MenuButton.cs" />
+    <Compile Include="MenuButtonBase.cs" />
+    <Compile Include="MenuButtonType.cs" />
+    <Compile Include="MenuButtonTypeConverter.cs" />
+    <Compile Include="MenuSubButton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WechatAccount.cs" />
     <Compile Include="WechatEntities.cs" />
