--- a/WechatLibrary/WechatLibrary.Core/WechatLibrary.Core.Net45.csproj
+++ b/WechatLibrary/WechatLibrary.Core/WechatLibrary.Core.Net45.csproj
@@ -51,7 +51,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cache\Cache.HasInit.cs" />
+    <Compile Include="Cache\Cache.HandlerDelegates.cs" />
+    <Compile Include="Init\Init.InitHandlerDelegate.cs" />
+    <Compile Include="Init\Init.InitImageHandlerDelegate.cs" />
+    <Compile Include="Init\Init.InitTextHandlerDelegate.cs" />
+    <Compile Include="Init\Init.InitVideoHandlerDelegate.cs" />
+    <Compile Include="Init\Init.InitVoiceHandlerDelegate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Route\Route.cs" />
     <Compile Include="Signature\Signature.cs" />
     <Compile Include="Wechat.cs" />
   </ItemGroup>
@@ -69,9 +77,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Init\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
