--- a/WechatLibrary/WechatLibrary.Model/WechatLibrary.Model.Net45.csproj
+++ b/WechatLibrary/WechatLibrary.Model/WechatLibrary.Model.Net45.csproj
@@ -56,6 +56,28 @@
     <Compile Include="MenuButtonType.cs" />
     <Compile Include="MenuButtonTypeConverter.cs" />
     <Compile Include="MenuSubButton.cs" />
+    <Compile Include="Message\Request\Event\MenuButtonMessage.cs" />
+    <Compile Include="Message\Request\Event\QRScanMessage.cs" />
+    <Compile Include="Message\Request\Event\QRSubscribeMessage.cs" />
+    <Compile Include="Message\Request\Event\SubscribeMessage.cs" />
+    <Compile Include="Message\Request\Event\UnsubscribeMessage.cs" />
+    <Compile Include="Message\Request\Event\UploadLocationMessage.cs" />
+    <Compile Include="Message\Request\ImageMessage.cs" />
+    <Compile Include="Message\Request\LinkMessage.cs" />
+    <Compile Include="Message\Request\LocationMessage.cs" />
+    <Compile Include="Message\Request\RequestMessageBase.cs" />
+    <Compile Include="Message\Request\TextMessage.cs" />
+    <Compile Include="Message\Request\VideoMessage.cs" />
+    <Compile Include="Message\Request\VoiceMessage.cs" />
+    <Compile Include="Message\Response\EmptyResult.cs" />
+    <Compile Include="Message\Response\ImageResult.cs" />
+    <Compile Include="Message\Response\MusicResult.cs" />
+    <Compile Include="Message\Response\NewsArticle.cs" />
+    <Compile Include="Message\Response\NewsResult.cs" />
+    <Compile Include="Message\Response\ResponseResultBase.cs" />
+    <Compile Include="Message\Response\TextResult.cs" />
+    <Compile Include="Message\Response\VideoResult.cs" />
+    <Compile Include="Message\Response\VoiceResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WechatAccount.cs" />
     <Compile Include="WechatEntities.cs" />
@@ -64,6 +86,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
