--- a/WechatLibrary/WechatLibrary.Core/WechatLibrary.Core.Net45.csproj
+++ b/WechatLibrary/WechatLibrary.Core/WechatLibrary.Core.Net45.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Route\Route.cs" />
     <Compile Include="Route\Route.GetHttpRequest.cs" />
     <Compile Include="Route\Route.GetHttpResponse.cs" />
-    <Compile Include="Route\Route.GetMsgTypeFromXDocument.cs" />
+    <Compile Include="Route\Route.GetMessageTypeFromXDocument.cs" />
     <Compile Include="Route\Route.ParseXmlToXDocument.cs" />
     <Compile Include="Route\Route.ReadRequestXml.cs" />
     <Compile Include="Signature\Signature.cs" />
