--- a/WechatLibrary/WechatLibrary.Interface/WechatLibrary.Interface.Net45.csproj
+++ b/WechatLibrary/WechatLibrary.Interface/WechatLibrary.Interface.Net45.csproj
@@ -53,6 +53,12 @@
     <Compile Include="Handler\IVoiceHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WechatLibrary.Model\WechatLibrary.Model.Net45.csproj">
+      <Project>{e4b16d0f-dcb1-4575-a45b-0ef63ec1d332}</Project>
+      <Name>WechatLibrary.Model.Net45</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
