--- a/WechatLibrary/Mvc4Test/Mvc4Test.csproj
+++ b/WechatLibrary/Mvc4Test/Mvc4Test.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Handlers\TextHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -146,6 +147,14 @@
     <ProjectReference Include="..\WechatLibrary.Core\WechatLibrary.Core.Net45.csproj">
       <Project>{d0e7d99b-a119-464d-b64a-6583df939736}</Project>
       <Name>WechatLibrary.Core.Net45</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WechatLibrary.Interface\WechatLibrary.Interface.Net45.csproj">
+      <Project>{e5a8a7e1-b4b1-4116-b945-575c5e0c614c}</Project>
+      <Name>WechatLibrary.Interface.Net45</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WechatLibrary.Model\WechatLibrary.Model.Net45.csproj">
+      <Project>{e4b16d0f-dcb1-4575-a45b-0ef63ec1d332}</Project>
+      <Name>WechatLibrary.Model.Net45</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
