--- a/WechatLibrary/WechatLibrary.Service/WechatLibrary.Service.Net45.csproj
+++ b/WechatLibrary/WechatLibrary.Service/WechatLibrary.Service.Net45.csproj
@@ -33,7 +33,14 @@
     <Reference Include="CommonDotNet">
       <HintPath>..\packages\CommonDotNet.1.1.5\lib\net45\CommonDotNet.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,11 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessTokenService.cs" />
     <Compile Include="Converter\XDocumentRequestMessageConverter.cs" />
     <Compile Include="Menu\MenuManagement.PostToWechatServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
