--- a/WechatLibrary/WechatLibrary/WechatLibrary.csproj
+++ b/WechatLibrary/WechatLibrary/WechatLibrary.csproj
@@ -41,6 +41,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -107,6 +108,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AccessTokenService.cs" />
     <Compile Include="Service\MenuService.cs" />
+    <Compile Include="Signature\Signature.cs" />
     <Compile Include="Wechat.cs" />
   </ItemGroup>
   <ItemGroup>
