--- a/WechatLibrary/WechatLibrary/WechatLibrary.csproj
+++ b/WechatLibrary/WechatLibrary/WechatLibrary.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Cache\Cache.cs" />
     <Compile Include="Cache\Cache.HandlerProcessRequestMethods.cs" />
     <Compile Include="Converter\MenuButtonTypeConverter.cs" />
+    <Compile Include="Converter\XDocumentRequestMessageConverter.cs" />
     <Compile Include="Init\Init.InitHandler.cs" />
     <Compile Include="Init\Init.InitHandlers.cs" />
     <Compile Include="Interface\Handler\IImageHandler.cs" />
@@ -108,11 +109,16 @@
     <Compile Include="Model\WechatAccount.cs" />
     <Compile Include="Model\WechatEntities.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.cs" />
+    <Compile Include="ProcessPipeline\ProcessPipeline.DeserializeXDocumentByMessageType.cs" />
+    <Compile Include="ProcessPipeline\ProcessPipeline.GetHandlerConstructorDelegateFromCacheByMessageType.cs" />
+    <Compile Include="ProcessPipeline\ProcessPipeline.GetHandlerProcessRequestMethodFromCacheByMessageType.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.GetHttpRequestAndHttpResponse.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.GetMessageTypeFromXDocument.cs" />
+    <Compile Include="ProcessPipeline\ProcessPipeline.InvokeHandlerIfHandlerConstructorDelegateAndProcessRequestMethodExist.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.ParseXmlToXDocument.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.ReadRequestXml.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.SerializeResponseResultAndWriteToResponseStream.cs" />
+    <Compile Include="ProcessPipeline\ProcessPipeline.SetDefaultValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AccessTokenService.cs" />
     <Compile Include="Service\MenuService.cs" />
