--- a/WechatLibrary/WechatLibrary/WechatLibrary.csproj
+++ b/WechatLibrary/WechatLibrary/WechatLibrary.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\WechatLibrary.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -54,6 +55,7 @@
     <Compile Include="Cache\Cache.cs" />
     <Compile Include="Cache\Cache.HandlerProcessRequestMethods.cs" />
     <Compile Include="Cache\Cache.HadResponseNormalMessageMsgIds.cs" />
+    <Compile Include="Converter\AutoResponseResultConverter.cs" />
     <Compile Include="Converter\MenuButtonTypeConverter.cs" />
     <Compile Include="Converter\XDocumentRequestMessageConverter.cs" />
     <Compile Include="Init\Init.InitHandler.cs" />
@@ -72,6 +74,15 @@
     <Compile Include="Interface\Handler\IVideoHandler.cs" />
     <Compile Include="Interface\Handler\IVoiceHandler.cs" />
     <Compile Include="Model\AccessToken.cs" />
+    <Compile Include="Model\AutoResponse\MatchResultMapping.cs" />
+    <Compile Include="Model\AutoResponse\Match\TextMessageMatch.cs" />
+    <Compile Include="Model\AutoResponse\Result\ImageAutoResponseResult.cs" />
+    <Compile Include="Model\AutoResponse\Result\MusicAutoResponseResult.cs" />
+    <Compile Include="Model\AutoResponse\Result\NewsAutoResponseArticle.cs" />
+    <Compile Include="Model\AutoResponse\Result\NewsAutoResponseResult.cs" />
+    <Compile Include="Model\AutoResponse\Result\TextAutoResponseResult.cs" />
+    <Compile Include="Model\AutoResponse\Result\VideoAutoResponseResult.cs" />
+    <Compile Include="Model\AutoResponse\Result\VoiceAutoResponseResult.cs" />
     <Compile Include="Model\Menu\Menu.cs" />
     <Compile Include="Model\Menu\MenuButton.cs" />
     <Compile Include="Model\Menu\MenuButtonBase.cs" />
@@ -107,23 +118,29 @@
     <Compile Include="Model\Return\AccessTokenReturn.cs" />
     <Compile Include="Model\Return\OAuth2AccessTokenReturn.cs" />
     <Compile Include="Model\Return\ReturnBase.cs" />
+    <Compile Include="Model\ReveiceLog\ReceiveLog.cs" />
     <Compile Include="Model\WechatAccount.cs" />
     <Compile Include="Model\WechatEntities.cs" />
+    <Compile Include="ProcessPipeline\DataBaseProcess\ProcessPipeline.ExecuteTextMessageDataBaseProcess.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.CheckHadResponseCurrentNormalMessage.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.DeserializeXDocumentByMessageType.cs" />
+    <Compile Include="ProcessPipeline\ProcessPipeline.ExecuteDataBaseProcess.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.GetHandlerConstructorDelegateFromCacheByMessageType.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.GetHandlerProcessRequestMethodFromCacheByMessageType.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.GetHttpRequestAndHttpResponse.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.GetMessageTypeFromXDocument.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.InvokeHandlerIfHandlerConstructorDelegateAndProcessRequestMethodExist.cs" />
+    <Compile Include="ProcessPipeline\ProcessPipeline.LogMessage.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.ParseXmlToXDocument.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.ReadRequestXml.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.SerializeResponseResultAndWriteToResponseStream.cs" />
     <Compile Include="ProcessPipeline\ProcessPipeline.SetDefaultValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AccessTokenService.cs" />
+    <Compile Include="Service\MessageLogService.cs" />
     <Compile Include="Service\MenuService.cs" />
+    <Compile Include="Service\MessageTypeService.cs" />
     <Compile Include="Signature\Signature.cs" />
     <Compile Include="Wechat.cs" />
     <Compile Include="Wechat.Event.cs" />
